[package]
name = "tminus-music"
version = "0.1.0"
edition = "2021"
description = "T-minus musical event prediction using conservation spectral theory"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
